src/bootstrap/test/v0_5/rejects/13_orphan_reject/util.zg
pub struct T { v: int }
